--- a/prac7/makefile
+++ b/prac7/makefile
@@ -5,5 +5,5 @@ OPTS = -Wall -O3 -std=c++0x
 mcp: mcp_greedy.cc
 	g++ ${OPTS} -o mcp_greedy mcp_greedy.cc
 
-tar: mcp.cc makefile
+tar: mcp_greedy.cc makefile
 	tar cvfz 48776654W.tar.gz mcp_greedy.cc makefile
